# qiskit

./: .gitignore  00_entorno_programacion.ipynb  01_quantum_info.ipynb  02_circuitos_cuanticos.ipynb  03_herramientas_visualizacion.ipynb  04_simuladores.ipynb  05_ejecucion_real_backend.ipynb  06_Deutsch_Jozsa.ipynb  08_Simon.ipynb  09_Grover.ipynb  10_QFT.ipynb  11_QPE.ipynb  12_Shor.ipynb  13_Runtime.ipynb  14_Optimizacion_VQE_QAOA.ipynb  15_Caso_optimizacion.ipynb  README.md  custom_utils.py  pyproject.toml  qiskit_auth.py
EJERCICIOS/: EJERCICIO1_QRBGs.ipynb  EJERCICIO2_Berstein-Vazirani.ipynb  EJERCICIO3_Problema_SAT.ipynb  EJERCICIO4_Optimizacion_VQE_QAOA.ipynb
SOLUCIONES/: 01_quantum_info-soluciones.ipynb  02_circuitos_cuanticos-soluciones.ipynb  03_herramientas_visualizacion-soluciones.ipynb  04_simuladores-soluciones.ipynb  05_ejecucion_real_backend-soluciones.ipynb  06_Deutsch_Jozsa_soluciones.ipynb  08_Simon_soluciones.ipynb  09_Grover-soluciones.ipynb  10_QFT-soluciones.ipynb  11_QPE-soluciones.ipynb  12_Shor-soluciones.ipynb  13_Runtime-soluciones (2).ipynb  14_Optimizacion_VQE_QAOA-soluciones.ipynb  15_Caso_optimizacion-soluciones.ipynb
