[tool.poetry]
name = "qiskit-lab"
version = "0.1.0"
description = ""
authors = ["Jorge Pulido <jorge.pulido@basf.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
qiskit = {extras = ["visualization"], version = "^0.46.0"}
pylatexenc = "^2.10"
qiskit-ibmq-provider = "^0.20.2"
ipykernel = "^6.29.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
